--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1 style="text-align: center;">Keshi</h1>
+    <h2></h2>
+
+    <button>submit</button>
 </body>
 </html>
